@@ -94,7 +94,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
   private static JP1Frame frame = null;
 
   /** Description of the Field. */
-  public final static String version = "v2.02 Alpha 9";
+  public final static String version = "v2.02 Alpha 10";
 
   /** The dir. */
   private File dir = null;
